--- a/form.scss
+++ b/form.scss
@@ -1,4 +1,5 @@
-
+$color1:#2ecc71;
+$color2: #e74c3c;
 
 
 
@@ -25,6 +26,8 @@ body{
 }
 .header h2{
     margin:0;
+    padding:30px 40px;
+    
 
 }
 .form{
@@ -45,4 +48,56 @@ body{
     border-radius: 4px;
     display:block;
     font-size: 14px;
+    padding:10px;
+    width: 100%;
+}
+.form-control.sucess input{
+    border-color: $color1;
+
+}
+.form-control.error input{
+    border-color: $color2;
+}
+
+.form-control i{
+    visibility: hidden;
+    position:absolute;
+    top:40px;
+    right:10px;
+}
+.form-control.sucess i.fa-check-circle{
+    color:$color1;
+    visibility: visible;
+
+}
+.form-control.error i.fa-exclamation-circle{
+    color:$color2;
+    visibility: visible;
+
+}
+
+
+.form-control small{
+    visibility: hidden;
+    position:absolute;
+    bottom:0;
+    left:0;
+
+}
+.form-control.error small{
+    color: $color2;
+    visibility: visible;
+}
+
+.form button{
+    background-color: rgb(205, 2, 103);
+    border: 2px solid black;
+    border-radius: 4px;
+    color:#fff;
+    display:block;
+    padding:10px;
+    width: 100%;
+    font-size: 16px;
+    font-family: inherit;
+
 }
