--- a/form.scss
+++ b/form.scss
@@ -51,11 +51,17 @@ body{
     padding:10px;
     width: 100%;
 }
-.form-control .success input{
-    color: $color1;
+.form-control input:focus{
+    outline:0;
+}
+.form-control.success input{
+    border-color: $color1;
     visibility: visible;
 }
-
+.form-control.error input{
+    border-color: $color2;
+    visibility: visible;
+}
 
 
 .form-control i{
@@ -64,6 +70,17 @@ body{
     top:40px;
     right:10px;
 }
+.form-control.success i.fa-check-circle {
+    color: $color1;
+    visibility: visible;
+
+}
+.form-control.error i.fa-exclamation-circle {
+    color: $color2;
+    visibility: visible;
+
+}
+
 
 
 
@@ -72,6 +89,11 @@ body{
     position:absolute;
     bottom:0;
     left:0;
+
+}
+.form-control.error small{
+    color:$color2;
+    visibility: visible;
 
 }
 
@@ -88,3 +110,4 @@ body{
     font-family: inherit;
 
 }
+
