--- a/style.css
+++ b/style.css
@@ -22,70 +22,64 @@ body {
 }
 
 .container {
-  background-color: #ed75b1;
+  background-color: #d855a0;
   border-radius: 5px;
   overflow: hidden;
   width: 400px;
   max-width: 100%;
+  padding: 10px;
 }
 
-#form h1 {
+h1 {
   margin: 0;
   text-align: center;
-  padding: 30px 40px;
-  color: white;
+  padding: 20px 40px;
+  margin-top: -30px;
 }
 
-#form button {
+.btn {
   padding: 10px;
   width: 100%;
-  background-color: #cd0267;
+  background-color: #e6fc76;
   font-family: inherit;
   font-size: 21px;
   border: none;
   border-radius: 4px;
+  margin-top: 5px;
 }
 
-#form {
+form {
   padding: 30px 40px;
 }
 
-.input-control {
-  margin-bottom: 10px;
-  padding-bottom: 20px;
+div {
+  margin-bottom: 5px;
+  padding-bottom: 10px;
   position: relative;
 }
 
-.input-control label {
+label {
   display: inline-block;
-  margin-bottom: 5px;
+  margin-bottom: 2px;
   font-size: 1.2em;
 }
 
-.input-control input {
+.textInput {
   display: block;
   padding: 10px;
   border-radius: 4px;
   width: 100%;
   height: 5vh;
   font-size: 14px;
+  margin-bottom: 2px;
 }
 
-.input-control input:focus {
-  outline: 0;
+.textInput:focus {
+  outline: none;
 }
 
-.input-control.success input {
-  border-color: #2ecc71;
-}
-
-.input-control.error input {
-  border-color: #e74c3c;
-}
-
-.input-control.error {
-  color: #e74c3c;
-  font-size: 10px;
-  height: 13px;
+.val_error {
+  color: red;
+  font-weight: 100;
 }
 /*# sourceMappingURL=style.css.map */
