--- a/style.scss
+++ b/style.scss
@@ -1,7 +1,7 @@
 $color1:#2ecc71;
-$color2: #e74c3c;
-$colorm:#ed75b1;
-$colorb: #cd0267;
+$color2: red;
+$colorm:#d855a0;
+$colorb: #e6fc76;
 
 
 
@@ -21,21 +21,23 @@ body{
     margin:0;
 }
 .container{ 
-    background-color: $colorm;
+    background-color:$colorm;
     border-radius: 5px;
     overflow: hidden;
     width:400px;
     max-width: 100%;
+    padding:10px;
 }
-#form h1{
+h1{
     margin: 0;
     text-align: center;
-    padding:30px 40px;
+    padding:20px 40px;
     //background: $colorb;
-    color: white;
+    //color: white;
+    margin-top: -30px;
 
 }
-#form button{
+.btn{
     padding:10px;
     width: 100%;
     background-color: $colorb;
@@ -43,45 +45,40 @@ body{
     font-size: 21px;
     border: none;
     border-radius: 4px;
+    margin-top:5px;
     
 }
 
-#form{
+form{
     padding:30px 40px;
 }
-.input-control{
-    margin-bottom: 10px;
-    padding-bottom:20px;
+div{
+    margin-bottom: 5px;
+    padding-bottom:10px;
     position: relative;
 }
-.input-control label{
+label{
     display: inline-block;
-    margin-bottom: 5px;
+    margin-bottom: 2px;
     font-size: 1.2em;
     
 }
-.input-control input{
+.textInput{
     display: block;
     padding:10px;
     border-radius: 4px;
     width: 100%;
     height: 5vh;
     font-size: 14px;
+    //background-color:#cd0267;
+    margin-bottom: 2px;
 
-}.input-control input:focus{
-    outline: 0;
+
 }
-.input-control.success input{
-    border-color: $color1;
+.textInput:focus{
+    outline:none;
 }
-.input-control.error input{
-    border-color: $color2;
-}
-.input-control.error{
+.val_error{
     color:$color2;
-    font-size: 10px;
-    height: 13px;
-    
-
+    font-weight: 100;
 }
-
