--- a/vform.scss
+++ b/vform.scss
@@ -1,6 +1,6 @@
 $mcolor: #5e8779;
 $color1:#2ecc71;
-$color2: red;
+$color2: #ff0000;
 $colorm:#d855a0;
 $colorb: #e6fc76;
 $color3:#e6e6e6;
@@ -53,7 +53,7 @@ hr{
     margin-top:30px;
     margin-bottom: 30px;
 }
-button{
+#btn{
     padding:8px;
     font-family: inherit;
     font-size: 20px;
