--- a/vform.css
+++ b/vform.css
@@ -51,7 +51,7 @@ hr {
   margin-bottom: 30px;
 }
 
-button {
+#btn {
   padding: 8px;
   font-family: inherit;
   font-size: 20px;
@@ -62,7 +62,7 @@ button {
   background-color: #e6fc76;
 }
 
-button:hover {
+#btn:hover {
   background-color: #d855a0;
   color: #e6e6e6;
   border: 1px solid black;
