--- a/style.css
+++ b/style.css
@@ -22,7 +22,7 @@ body {
 }
 
 .container {
-  background-color: #d855a0;
+  background-color: #96798c;
   border-radius: 5px;
   overflow: hidden;
   width: 400px;
@@ -48,6 +48,10 @@ h1 {
   margin-top: 5px;
 }
 
+.btn:hover {
+  background-color: #eda1c7;
+}
+
 form {
   padding: 30px 40px;
 }
@@ -71,6 +75,7 @@ label {
   width: 100%;
   height: 5vh;
   font-size: 14px;
+  font-size: inherit;
   margin-bottom: 2px;
 }
 
@@ -79,7 +84,8 @@ label {
 }
 
 .val_error {
-  color: red;
+  color: #ed0000;
   font-weight: 100;
+  font-size: 18px;
 }
 /*# sourceMappingURL=style.css.map */
