--- a/style.scss
+++ b/style.scss
@@ -1,6 +1,6 @@
 $color1:#2ecc71;
-$color2: red;
-$colorm:#d855a0;
+$color2: #ed0000;
+$colorm:#96798c;
 $colorb: #e6fc76;
 
 
@@ -46,6 +46,10 @@ h1{
     border: none;
     border-radius: 4px;
     margin-top:5px;
+    &:hover{
+        background-color:#eda1c7;
+
+    }
     
 }
 
@@ -70,6 +74,7 @@ label{
     width: 100%;
     height: 5vh;
     font-size: 14px;
+    font-size: inherit;
     //background-color:#cd0267;
     margin-bottom: 2px;
 
@@ -81,4 +86,5 @@ label{
 .val_error{
     color:$color2;
     font-weight: 100;
+    font-size: 18px;
 }
