--- a/style.scss
+++ b/style.scss
@@ -33,7 +33,7 @@ h1{
     text-align: center;
     padding:20px 40px;
     //background: $colorb;
-    //color: white;
+    color: white;
     margin-top: -30px;
 
 }
